$ git push --force-with-lease

--- a/.hintrc
+++ b/.hintrc
@@ -9,7 +9,8 @@
         "ignore": [
           "inset-block-start",
           "inset-block-end",
-          "inset-inline-start"
+          "inset-inline-start",
+          "inset-inline-end"
         ]
       }
     ]
